tests/golden/custom-logo/openshift4-console/openshift4-console/10_console_favicon_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /static/assets/openshift-favicon.png
  labels:
    app: console
    name: console-favicon
  name: console-favicon
  namespace: openshift-console
spec:
  host: console.company.cloud
  path: /favicon.ico
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
